fix [docs]: alignment of reset button for search-input

--- a/src/main/resources/javadoc-style.css
+++ b/src/main/resources/javadoc-style.css
@@ -208,6 +208,12 @@ body > div.flex-box > header > nav > div.sub-nav > div:nth-child(1) {
     box-shadow: var(--shadow);
 }
 
+#reset-button {
+    padding: 5px 10px;
+    margin-top: 4px;
+    margin-right: 15px;
+}
+
 #page-search-reset:hover, #search-reset:hover {
     background: var(--subnav-background-color);
     color: var(--secondary-text-color);
